<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fon"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:gravity="bottom|end"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/c"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/percent"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/backspace"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/div"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_number_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_7"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_8"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_9"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/multiply"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_number_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_4"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_5"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_6"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/subtract"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_number_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_1"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_2"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_number_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_3"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/addition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/addition"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_number_two_null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_00"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_number_null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/_0"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/point"
                android:textSize="30sp"

                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/equally"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:text="@string/equally"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>
    </TableLayout>
</FrameLayout>
